8277106: Cannot compile certain sources with --release