@@ -28,8 +28,14 @@ import java.lang.annotation.Retention;
 import java.lang.annotation.RetentionPolicy;
 import java.lang.reflect.Method;
 import java.util.Arrays;
+import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.io.IOException;
+import java.io.OutputStream;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.DirectoryStream;
 import java.nio.file.FileVisitResult;
 import java.nio.file.FileVisitor;
 import java.nio.file.Files;
@@ -52,6 +58,14 @@ import build.tools.symbolgenerator.CreateSymbols.ClassDescription;
 import build.tools.symbolgenerator.CreateSymbols.ClassList;
 import build.tools.symbolgenerator.CreateSymbols.ExcludeIncludeList;
 import build.tools.symbolgenerator.CreateSymbols.VersionDescription;
+import com.sun.tools.classfile.Attribute;
+import com.sun.tools.classfile.Attributes;
+import com.sun.tools.classfile.ClassFile;
+import com.sun.tools.classfile.ClassWriter;
+import com.sun.tools.classfile.ConstantPool;
+import com.sun.tools.classfile.ConstantPool.CPInfo;
+import com.sun.tools.classfile.ConstantPool.CONSTANT_Utf8_info;
+import com.sun.tools.classfile.ModulePackages_attribute;
 
 public class CreateSymbolsTestImpl {
 
@@ -641,6 +655,542 @@ public class CreateSymbolsTestImpl {
                            """);
     }
 
+    @Test
+    void testSealed1() throws Exception {
+        doTestComplex("api.Api",
+                     """
+                     package api;
+
+                     public sealed interface Api permits api.Impl {
+                     }
+                     """,
+                     """
+                     import api.Api;
+                     public class Test {
+                         private void t(Api api) {
+                            Runnable r = (Runnable) api;
+                         }
+                     }
+                     """,
+                     """
+                     import api.Api;
+                     public class Test {
+                         private void t(Api api) {
+                            Exception e = (Exception) api;
+                         }
+                     }
+                     """,
+                     """
+                     module m {
+                         exports api;
+                     }
+                     """,
+                     """
+                     package api;
+                     public sealed interface Api permits Impl {
+                     }
+                     """,
+                     """
+                     package api;
+                     final class Impl implements Api, Runnable {
+                         public void run() {}
+                     }
+                     """);
+    }
+
+    @Test
+    void testSealed2() throws Exception {
+        doTestComplex("api.Api",
+                     """
+                     package api;
+
+                     public sealed interface Api permits nonapi.Impl {
+                     }
+                     """,
+                     """
+                     import api.Api;
+                     public class Test {
+                         private void t(Api api) {
+                            Runnable r = (Runnable) api;
+                         }
+                     }
+                     """,
+                     """
+                     import api.Api;
+                     public class Test {
+                         private void t(Api api) {
+                            Exception e = (Exception) api;
+                         }
+                     }
+                     """,
+                     """
+                     module m {
+                         exports api;
+                     }
+                     """,
+                     """
+                     package api;
+                     import nonapi.Impl;
+                     public sealed interface Api permits Impl {
+                     }
+                     """,
+                     """
+                     package nonapi;
+                     import api.Api;
+                     public final class Impl implements Api, Runnable {
+                         public void run() {}
+                     }
+                     """);
+    }
+
+    @Test
+    void testSealed3() throws Exception {
+        doTestComplex("api.Api",
+                     """
+                     package api;
+
+                     public sealed interface Api permits nonapi.Impl.Nested.Permitted {
+                     }
+                     """,
+                     """
+                     import api.Api;
+                     public class Test {
+                         private void t(Api api) {
+                            Runnable r = (Runnable) api;
+                         }
+                     }
+                     """,
+                     """
+                     import api.Api;
+                     public class Test {
+                         private void t(Api api) {
+                            Exception e = (Exception) api;
+                         }
+                     }
+                     """,
+                     """
+                     module m {
+                         exports api;
+                     }
+                     """,
+                     """
+                     package api;
+                     import nonapi.Impl;
+                     public sealed interface Api permits Impl.Nested.Permitted {
+                     }
+                     """,
+                     """
+                     package nonapi;
+                     import api.Api;
+                     public class Impl {
+                         public final class Nested {
+                             public static final class Permitted implements Api, Runnable {
+                                 public void run() {}
+                             }
+                         }
+                     }
+                     """);
+    }
+
+    @Test
+    void testNonExportedSuperclass() throws Exception {
+        doTestComplex("api.Api",
+                      """
+                      package api;
+
+                      public class Api extends nonapi.Impl.Nested.Exp {
+
+                        public Api();
+                      }
+                      """,
+                      """
+                      import api.Api;
+                      public class Test {
+                          private void t(Api api) {
+                            api.run();
+                          }
+                      }
+                      """,
+                      """
+                      import api.Api;
+                      public class Test {
+                          private void t(Api api) {
+                              fail
+                          }
+                      }
+                      """,
+                      """
+                      module m {
+                          exports api;
+                      }
+                      """,
+                      """
+                      package api;
+                      import nonapi.Impl;
+                      public class Api extends Impl.Nested.Exp {
+                      }
+                      """,
+                      """
+                      package api;
+                      public @interface Ann {
+                      }
+                      """,
+                      """
+                      package nonapi;
+                      import api.Ann;
+                      public class Impl {
+                          public static final String C = "";
+                          public void test() {}
+                          @Ann
+                          public static class Nested {
+                              public static class Exp extends Nested implements Runnable {
+                                  public void run() {}
+                                  public OtherNested get() { return null; }
+                              }
+                          }
+                          public static class OtherNested {}
+                      }
+                      """);
+    }
+
+    void doTestComplex(String printClass,
+                      String expected,
+                      String depSuccess,
+                      String depFailure,
+                      String... code) throws Exception {
+        ToolBox tb = new ToolBox();
+        String testClasses = System.getProperty("test.classes");
+        Path output = Paths.get(testClasses, "test-data" + i++);
+        deleteRecursively(output);
+        Files.createDirectories(output);
+        Path ver9Jar = output.resolve("9.jar");
+        compileAndPack(output,
+                       ver9Jar,
+                       code);
+
+
+        Path ctSym = output.resolve("ct.sym");
+
+        deleteRecursively(ctSym);
+
+        CreateSymbols.ALLOW_NON_EXISTING_CLASSES = true;
+        CreateSymbols.EXTENSION = ".class";
+
+        deleteRecursively(ctSym);
+
+        List<VersionDescription> versions =
+                Arrays.asList(new VersionDescription(ver9Jar.toAbsolutePath().toString(), "9", null));
+
+        ExcludeIncludeList acceptAll = new ExcludeIncludeList(null, null) {
+            @Override public boolean accepts(String className, boolean includePrivateClasses) {
+                return true;
+            }
+        };
+        new CreateSymbols().createBaseLine(versions, acceptAll, ctSym, new String[0]);
+        Path symbolsDesc = ctSym.resolve("symbols");
+        Path systemModules = ctSym.resolve("systemModules");
+
+        Files.newBufferedWriter(systemModules).close();
+
+        Path classesZip = output.resolve("classes.zip");
+        Path classesDir = output.resolve("classes");
+
+        new CreateSymbols().createSymbols(null, symbolsDesc.toAbsolutePath().toString(), classesZip.toAbsolutePath().toString(), 0, "9", systemModules.toString());
+
+        try (JarFile jf = new JarFile(classesZip.toFile())) {
+            Enumeration<JarEntry> en = jf.entries();
+
+            while (en.hasMoreElements()) {
+                JarEntry je = en.nextElement();
+                if (je.isDirectory()) continue;
+                Path target = classesDir.resolve(je.getName());
+                Files.createDirectories(target.getParent());
+                Files.copy(jf.getInputStream(je), target);
+            }
+        }
+
+        Path classes = classesDir;
+        Path scratch = output.resolve("scratch");
+
+        Files.createDirectories(scratch);
+
+        String modulePath;
+
+        try (Stream<Path> elements = Files.list(classes)) {
+            modulePath = elements.filter(el -> el.getFileName().toString().contains("9"))
+                            .map(el -> el.resolve("m"))
+                            .map(el -> el.toAbsolutePath().toString())
+                            .collect(Collectors.joining(File.pathSeparator));
+        }
+
+        {
+            String out = new JavacTask(tb, Task.Mode.CMDLINE)
+                    .options("-d", scratch.toAbsolutePath().toString(), "--module-path", modulePath,
+                             "--add-modules", "m",  "-Xprint", "api.Api")
+                    .run(Expect.SUCCESS)
+                    .getOutput(Task.OutputKind.STDOUT)
+                    .replaceAll("\\R", "\n");
+
+            if (!out.equals(expected)) {
+                throw new AssertionError("out=" + out + "; expected=" + expected);
+            }
+        }
+
+        {
+            new JavacTask(tb)
+                    .options("-d", scratch.toAbsolutePath().toString(), "--module-path", modulePath,
+                             "--add-modules", "m")
+                    .sources(depSuccess)
+                    .run(Expect.SUCCESS)
+                    .writeAll();
+        }
+
+        {
+            String expectedFailure = new JavacTask(tb)
+                    .options("-d", scratch.toAbsolutePath().toString(), "--module-path", output.resolve("temp").toString(),
+                             "--add-modules", "m", "-XDrawDiagnostics")
+                    .sources(depFailure)
+                    .run(Expect.FAIL)
+                    .getOutput(Task.OutputKind.DIRECT)
+                    .replaceAll("\\R", "\n");
+
+            String out = new JavacTask(tb)
+                    .options("-d", scratch.toAbsolutePath().toString(), "--module-path", modulePath,
+                             "--add-modules", "m", "-XDrawDiagnostics")
+                    .sources(depFailure)
+                    .run(Expect.FAIL)
+                    .getOutput(Task.OutputKind.DIRECT)
+                    .replaceAll("\\R", "\n");
+
+            if (!out.equals(expectedFailure)) {
+                throw new AssertionError("out=" + out + "; expected=" + expectedFailure);
+            }
+        }
+    }
+
+    @Test
+    void testSealedData1() throws Exception {
+        doTestData("""
+                         module name m
+                         header exports api extraModulePackages nonapi requires name\\u0020;java.base\\u0020;flags\\u0020;8000\\u0020;version\\u0020;0 flags 8000
+
+                         class name api/Ann
+                         header extends java/lang/Object implements java/lang/annotation/Annotation flags 2601
+
+                         class name api/Api
+                         header extends java/lang/Object sealed true permittedSubclasses nonapi/Impl$Nested$Permitted flags 601
+                         innerclass innerClass nonapi/Impl$Nested outerClass nonapi/Impl innerClassName Nested flags 11
+                         innerclass innerClass nonapi/Impl$Nested$Permitted outerClass nonapi/Impl$Nested innerClassName Permitted flags 19
+
+                         class name api/E
+                         header extends java/lang/Enum flags 4021 signature Ljava/lang/Enum<Lapi/E;>;
+                         field name A descriptor Lapi/E; flags 4019
+                         field name B descriptor Lapi/E; flags 4019
+                         method name values descriptor ()[Lapi/E; flags 9
+                         method name valueOf descriptor (Ljava/lang/String;)Lapi/E; flags 9
+
+                         class name nonapi/Impl
+                         header extends java/lang/Object nestMembers nonapi/Impl$Nested,nonapi/Impl$Nested$Permitted flags 21
+                         innerclass innerClass nonapi/Impl$Nested outerClass nonapi/Impl innerClassName Nested flags 11
+                         innerclass innerClass nonapi/Impl$Nested$Permitted outerClass nonapi/Impl$Nested innerClassName Permitted flags 19
+                         field name C descriptor Ljava/lang/String; constantValue  flags 19
+                         method name <init> descriptor ()V flags 1
+                         method name test descriptor ()V flags 1
+
+                         class name nonapi/Impl$Nested
+                         header extends java/lang/Object nestHost nonapi/Impl flags 31 classAnnotations @Lapi/Ann;
+                         innerclass innerClass nonapi/Impl$Nested outerClass nonapi/Impl innerClassName Nested flags 11
+                         innerclass innerClass nonapi/Impl$Nested$Permitted outerClass nonapi/Impl$Nested innerClassName Permitted flags 19
+                         method name <init> descriptor (Lnonapi/Impl;)V flags 1
+
+                         class name nonapi/Impl$Nested$Permitted
+                         header extends java/lang/Object implements api/Api,java/lang/Runnable nestHost nonapi/Impl flags 31
+                         innerclass innerClass nonapi/Impl$Nested outerClass nonapi/Impl innerClassName Nested flags 11
+                         innerclass innerClass nonapi/Impl$Nested$Permitted outerClass nonapi/Impl$Nested innerClassName Permitted flags 19
+                         method name <init> descriptor ()V flags 1
+                         method name run descriptor ()V flags 1
+                         method name get descriptor ()Lnonapi/Impl$OtherNested; flags 1
+
+                         """,
+                         """
+                         module m {
+                             exports api;
+                         }
+                         """,
+                         """
+                         package api;
+                         import nonapi.Impl;
+                         public sealed interface Api permits Impl.Nested.Permitted {
+                         }
+                         """,
+                         """
+                         package api;
+                         public enum E {
+                            A() {},
+                            B() {};
+                         }
+                         """,
+                         """
+                         package api;
+                         public @interface Ann {
+                         }
+                         """,
+                         """
+                         package nonapi;
+                         import api.Ann;
+                         import api.Api;
+                         public class Impl {
+                             public static final String C = "";
+                             public void test() {}
+                             @Ann
+                             public final class Nested {
+                                 public static final class Permitted implements Api, Runnable {
+                                     public void run() {}
+                                     public OtherNested get() { return null; }
+                                 }
+                             }
+                             public static class OtherNested {}
+                         }
+                         """,
+                         """
+                         package nonapi;
+                         public enum E {
+                            A() {},
+                            B() {};
+                         }
+                         """,
+                         """
+                         package nonapi;
+                         public sealed class T {
+                             private static final class Impl extends T {}
+                         }
+                         """);
+    }
+
+    @Test
+    void testExtendsInternalData1() throws Exception {
+        doTestData("""
+                   module name m
+                   header exports api,nonapi[java.base] requires name\\u0020;java.base\\u0020;flags\\u0020;8000\\u0020;version\\u0020;0 flags 8000
+
+                   class name api/Ann
+                   header extends java/lang/Object implements java/lang/annotation/Annotation flags 2601
+
+                   class name api/Api
+                   header extends nonapi/Impl$Nested$Exp flags 21
+                   innerclass innerClass nonapi/Impl$Nested outerClass nonapi/Impl innerClassName Nested flags 9
+                   innerclass innerClass nonapi/Impl$Nested$Exp outerClass nonapi/Impl$Nested innerClassName Exp flags 9
+                   method name <init> descriptor ()V flags 1
+
+                   class name nonapi/Impl
+                   header extends java/lang/Object nestMembers nonapi/Impl$Nested,nonapi/Impl$Nested$Exp flags 21
+                   innerclass innerClass nonapi/Impl$Nested outerClass nonapi/Impl innerClassName Nested flags 9
+                   innerclass innerClass nonapi/Impl$Nested$Exp outerClass nonapi/Impl$Nested innerClassName Exp flags 9
+                   field name C descriptor Ljava/lang/String; constantValue  flags 19
+                   method name <init> descriptor ()V flags 1
+                   method name test descriptor ()V flags 1
+
+                   class name nonapi/Impl$Nested
+                   header extends java/lang/Object nestHost nonapi/Impl flags 21 classAnnotations @Lapi/Ann;
+                   innerclass innerClass nonapi/Impl$Nested outerClass nonapi/Impl innerClassName Nested flags 9
+                   innerclass innerClass nonapi/Impl$Nested$Exp outerClass nonapi/Impl$Nested innerClassName Exp flags 9
+                   method name <init> descriptor ()V flags 1
+
+                   class name nonapi/Impl$Nested$Exp
+                   header extends nonapi/Impl$Nested implements java/lang/Runnable nestHost nonapi/Impl flags 21
+                   innerclass innerClass nonapi/Impl$Nested outerClass nonapi/Impl innerClassName Nested flags 9
+                   innerclass innerClass nonapi/Impl$Nested$Exp outerClass nonapi/Impl$Nested innerClassName Exp flags 9
+                   method name <init> descriptor ()V flags 1
+                   method name run descriptor ()V flags 1
+                   method name get descriptor ()Lnonapi/Impl$OtherNested; flags 1
+
+                   """,
+                   """
+                   module m {
+                       exports api;
+                       exports nonapi to java.base;
+                   }
+                   """,
+                   """
+                   package api;
+                   import nonapi.Impl;
+                   public class Api extends Impl.Nested.Exp {
+                   }
+                   """,
+                   """
+                   package api;
+                   public @interface Ann {
+                   }
+                   """,
+                   """
+                   package nonapi;
+                   import api.Ann;
+                   public class Impl {
+                       public static final String C = "";
+                       public void test() {}
+                       @Ann
+                       public static class Nested {
+                           public static class Exp extends Nested implements Runnable {
+                               public void run() {}
+                               public OtherNested get() { return null; }
+                           }
+                       }
+                       public static class OtherNested {}
+                   }
+                   """);
+    }
+
+    void doTestData(String data,
+                          String... code) throws Exception {
+        String testClasses = System.getProperty("test.classes");
+        Path output = Paths.get(testClasses, "test-data" + i++);
+        deleteRecursively(output);
+        Files.createDirectories(output);
+        Path ver9Jar = output.resolve("9.jar");
+        compileAndPack(output,
+                       ver9Jar,
+                       code);
+
+        Path ctSym = output.resolve("ct.sym");
+
+        deleteRecursively(ctSym);
+
+        CreateSymbols.ALLOW_NON_EXISTING_CLASSES = true;
+        CreateSymbols.DO_NOT_MODIFY = "";
+        CreateSymbols.EXTENSION = ".class";
+        CreateSymbols.INJECTED_VERSION = "0";
+
+        deleteRecursively(ctSym);
+
+        List<VersionDescription> versions =
+                Arrays.asList(new VersionDescription(ver9Jar.toAbsolutePath().toString(), "9", null));
+
+        ExcludeIncludeList acceptAll = new ExcludeIncludeList(null, null) {
+            @Override public boolean accepts(String className, boolean includePrivateClasses) {
+                return true;
+            }
+        };
+        new CreateSymbols().createBaseLine(versions, acceptAll, ctSym, new String[0]);
+
+        Path symFile = null;
+
+        try (DirectoryStream<Path> ds = Files.newDirectoryStream(ctSym)) {
+            for (Path p : ds) {
+                if (p.toString().endsWith(".sym.txt")) {
+                    if (symFile != null) {
+                        throw new IllegalStateException("Multiple sym files!");
+                    } else {
+                        symFile = p;
+                    }
+                }
+            }
+        }
+        String acutalContent = new String(Files.readAllBytes(symFile), StandardCharsets.UTF_8);
+        if (!acutalContent.equals(data)) {
+            throw new AssertionError("out=" + acutalContent + "; expected=" + data);
+        }
+    }
+
     void doTestIncluded(String code, String... includedClasses) throws Exception {
         boolean oldIncludeAll = includeAll;
         try {
@@ -712,7 +1262,7 @@ public class CreateSymbolsTestImpl {
                               new VersionDescription(jar8.toAbsolutePath().toString(), "8", "7"));
 
         ExcludeIncludeList acceptAll = new ExcludeIncludeList(null, null) {
-            @Override public boolean accepts(String className) {
+            @Override public boolean accepts(String className, boolean includePrivateClasses) {
                 return true;
             }
         };
@@ -743,6 +1293,36 @@ public class CreateSymbolsTestImpl {
         System.err.println(Arrays.asList(code));
         new JavacTask(tb).sources(code).options("-d", scratch.toAbsolutePath().toString()).run(Expect.SUCCESS);
         List<String> classFiles = collectClassFile(scratch);
+        Path moduleInfo = scratch.resolve("module-info.class");
+        if (Files.exists(moduleInfo)) {
+            Set<String> packages = new HashSet<>();
+            for (String cf : classFiles) {
+                int sep = cf.lastIndexOf(scratch.getFileSystem().getSeparator());
+                if (sep != (-1)) {
+                    packages.add(cf.substring(0, sep));
+                }
+            }
+            ClassFile cf = ClassFile.read(moduleInfo);
+            List<CPInfo> cp = new ArrayList<>();
+            cp.add(null);
+            cf.constant_pool.entries().forEach(cp::add);
+            Map<String, Attribute> attrs = new HashMap<>(cf.attributes.map);
+            int[] encodedPackages = new int[packages.size()];
+            int i = 0;
+            for (String p : packages) {
+                int nameIndex = cp.size();
+                cp.add(new CONSTANT_Utf8_info(p));
+                encodedPackages[i++] = cp.size();
+                cp.add(new ConstantPool.CONSTANT_Package_info(null, nameIndex));
+            }
+            int attrName = cp.size();
+            cp.add(new CONSTANT_Utf8_info(Attribute.ModulePackages));
+            attrs.put(Attribute.ModulePackages, new ModulePackages_attribute(attrName, encodedPackages));
+            ClassFile newFile = new ClassFile(cf.magic, cf.minor_version, cf.major_version, new ConstantPool(cp.toArray(new CPInfo[0])), cf.access_flags, cf.this_class, cf.super_class, cf.interfaces, cf.fields, cf.methods, new Attributes(attrs));
+            try (OutputStream out = Files.newOutputStream(moduleInfo)) {
+                new ClassWriter().write(newFile, out);
+            }
+        }
         try (Writer out = Files.newBufferedWriter(outputFile)) {
             for (String classFile : classFiles) {
                 try (InputStream in = Files.newInputStream(scratch.resolve(classFile))) {
